--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -17,6 +17,11 @@ on:
         description: "Project name"
         required: true
         type: string
+      run-build:
+        description: "Whether to run build"
+        required: false
+        type: boolean
+        default: true
       run-tests:
         description: "Whether to run tests"
         required: false
@@ -52,10 +57,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node.js and install dependencies
-        uses: ./.github/actions/setup-node
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
@@ -71,10 +80,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node.js and install dependencies
-        uses: ./.github/actions/setup-node
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run TypeScript type check
         run: npx tsc --noEmit
@@ -83,6 +96,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    if: inputs.run-build
     permissions:
       contents: read
 
@@ -90,10 +104,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node.js and install dependencies
-        uses: ./.github/actions/setup-node
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build project
         run: npm run build
@@ -110,16 +128,51 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node.js and install dependencies
-        uses: ./.github/actions/setup-node
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
+          cache: "npm"
 
-      - name: Setup MongoDB
+      - name: Install MongoDB
         if: inputs.mongodb-connection-string == ''
-        uses: ./.github/actions/setup-mongodb
+        uses: supercharge/mongodb-github-action@1.12.0
         with:
           mongodb-version: ${{ inputs.mongodb-version }}
+          mongodb-container-name: mongodb
+          mongodb-port: 27017
+          mongodb-db: mongodb
+          mongodb-username: admin
+          mongodb-password: password
+
+      - name: Install MongoDB shell
+        if: inputs.mongodb-connection-string == ''
+        run: |
+          if ! command -v mongosh &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y gnupg curl
+            curl -fsSL https://www.mongodb.org/static/pgp/server-8.0.asc | \
+            sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg --dearmor
+            echo "deb [ arch=amd64,arm64 signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] https://repo.mongodb.org/apt/ubuntu $(lsb_release -cs)/mongodb-org/8.0 multiverse" | \
+            sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list
+            sudo apt-get update && sudo apt-get install -y mongodb-mongosh
+          fi
+
+      - name: Check MongoDB
+        if: inputs.mongodb-connection-string == ''
+        run: |
+          for i in {1..30}; do
+            if mongosh --eval "db.runCommand({ ping: 1 })" localhost:27017 --quiet > /dev/null 2>&1; then
+              echo "MongoDB is up (attempt $i)"
+              exit 0
+            fi
+            echo "Waiting for MongoDB... (attempt $i)"
+            sleep 2
+          done
+          echo "MongoDB did not start in time!" && exit 1
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run Tests
         env:
@@ -130,8 +183,8 @@ jobs:
   build-docker:
     name: Build and Test Docker Container
     runs-on: ubuntu-latest
-    needs: [lint, type-check, build]
-    if: always() && (needs.lint.result == 'success' && needs.type-check.result == 'success' && needs.build.result == 'success')
+    needs: [lint, type-check]
+    if: always() && (needs.lint.result == 'success' && needs.type-check.result == 'success') && (inputs.run-build == false || needs.build.result == 'success')
     timeout-minutes: 30
     permissions:
       contents: read
@@ -142,6 +195,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -150,19 +206,42 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        uses: ./.github/actions/docker-build
+        uses: docker/build-push-action@v6
         with:
           context: .
           tags: ${{ inputs.project-name }}:test
-          load: "true"
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Run Security Scan (Container)
+      - name: Set up Snyk CLI
         if: inputs.run-security-scan && (!inputs.security-scan-on-main-only || (github.event_name == 'pull_request' && github.base_ref == 'main'))
-        uses: ./.github/actions/security-scan
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Prepare SARIF directory
+        if: inputs.run-security-scan && (!inputs.security-scan-on-main-only || (github.event_name == 'pull_request' && github.base_ref == 'main'))
+        run: mkdir -p sarif
+
+      - name: Snyk Container test (SARIF)
+        if: inputs.run-security-scan && (!inputs.security-scan-on-main-only || (github.event_name == 'pull_request' && github.base_ref == 'main'))
+        run: snyk container test ${{ inputs.project-name }}:test --file=Dockerfile --exclude-app-vulns --sarif-file-output=./sarif/snyk-container.sarif || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk Container monitor
+        if: inputs.run-security-scan && (!inputs.security-scan-on-main-only || (github.event_name == 'pull_request' && github.base_ref == 'main'))
+        run: snyk container monitor ${{ inputs.project-name }}:test --file=Dockerfile
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Upload Snyk Container SARIF
+        if: inputs.run-security-scan && (!inputs.security-scan-on-main-only || (github.event_name == 'pull_request' && github.base_ref == 'main')) && hashFiles('sarif/snyk-container.sarif') != ''
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
-          scan-type: container
-          container-image: ${{ inputs.project-name }}:test
+          sarif_file: sarif/snyk-container.sarif
+          category: snyk-container
 
       - name: Cleanup test image
         if: always()
@@ -182,19 +261,48 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Setup Node.js and install dependencies
-        uses: ./.github/actions/setup-node
+      - name: Set up Node.js
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ inputs.node-version }}
+          cache: "npm"
 
-      - name: Run Security Scan (Code)
-        uses: ./.github/actions/security-scan
-        with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
-          scan-type: code
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Run Security Scan (OSS)
-        uses: ./.github/actions/security-scan
+      - name: Set up Snyk CLI
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Prepare SARIF directory
+        run: mkdir -p sarif
+
+      - name: Snyk Code test (SARIF)
+        run: snyk code test --sarif-file-output=./sarif/snyk-code.sarif || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk Open Source monitor
+        run: snyk monitor --file=package-lock.json --package-manager=npm --strict-out-of-sync=false
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Snyk Open Source test (SARIF)
+        run: snyk test --all-projects --sarif-file-output=./sarif/snyk-oss.sarif --strict-out-of-sync=false || true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Upload Snyk Code SARIF
+        if: hashFiles('sarif/snyk-code.sarif') != ''
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
-          scan-type: oss
+          sarif_file: sarif/snyk-code.sarif
+          category: snyk-code
+
+      - name: Upload Snyk OSS SARIF
+        if: hashFiles('sarif/snyk-oss.sarif') != ''
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: sarif/snyk-oss.sarif
+          category: snyk-oss
