--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -112,6 +112,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        
+      - name: Generate graphql types
+        run: npm run generate  
 
       - name: Build project
         run: npm run build
