--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Generate graphql 
+      - name: Generate graphql types 
         if: inputs.run-graphql-generate
         run: npm run generate  
 
